# kuriflow-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml  server.json
kuriflow_mcp/: __init__.py  __main__.py  client.py  server.py
