[project]
name = "kuriflow-mcp"
version = "0.1.0"
description = "Kuriflow MCP Server — Back-office execution engine for AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
kuriflow-mcp = "kuriflow_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
